--- a/alumni-client/.gitignore
+++ b/alumni-client/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment variable files
+.env              # base env (general)
+.env.*            # .env.production, .env.development, etc.
+!.env.example     # keep a sample for others
