--- a/alumni-client/package.json
+++ b/alumni-client/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "date-fns": "^4.1.0",
+    "heroicons": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
