--- a/alumni-client/package.json
+++ b/alumni-client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "date-fns": "^4.1.0",
     "heroicons": "^2.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
