--- a/alumni-client/package.json
+++ b/alumni-client/package.json
@@ -15,10 +15,12 @@
     "date-fns": "^4.1.0",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.525.0",
+    "pdfjs-dist": "^5.3.93",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.5.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
